<resources>
    <string name="app_name">Buttercup</string>
    <string name="feedback">Feedback</string>
    <string name="instructions">Supply feedback subject and message body below</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="subject_body_empty">Please supply subject and body of the feedback message.</string>
    <string name="feedback_sent">Feedback sent successfully.</string>
    <string name="ok">OK</string>
    <string name="internet_unavailable">Internet connection not available.</string>
    <string name="logcat_btn_tooltip">Click to send logcat for analysis</string>
    <string name="send_logcat">Send Logcat</string>
    <string name="sending_logcat">Sending logcat…</string>
    <string name="logcat_sent">Logcat sent.</string>
    <string name="logcat_not_retrieved">Error. Logcat wasn\'t retrieved.</string>
    <string name="logcat_notification_title">Logcat Upload</string>
    <string name="logcat_notification_desc">Logcat upload in progress</string>
    <string name="logcat_notification_channel_name">Buttercup Feedback Logcat Channel</string>
    <string name="logcat_notification_channel_description">Notification channel for logcat upload progress</string>
    <string name="feedback_notification_title">Feedback Upload</string>
    <string name="feedback_notification_desc">Feedback upload in progress.</string>
    <string name="feedback_notification_channel_name">Buttercup Feedback Feedback Channel</string>
    <string name="feedback_notification_channel_description">Notification channel for feedback upload progress</string>
    <string name="attach_screenshot">Attach screenshot</string>
    <string name="image_pick_failed">Image retrieval failed.</string>
    <string name="take_screenshot">Take a Screenshot</string>
    <string name="screen_capture_rejected">Screen capture permission rejected.</string>
    <string name="screen_capture_failed">Error while capturing screen.</string>
    <string name="popup_window_launch_error">Error while launching screenshot window.</string>
    <string name="popup_window_close_error">Error while closing screensot window.</string>
    <string name="screenshot_notification_title">Screen capture is active.</string>
    <string name="default_config_notification_desc">To screenshot click the floating button.</string>
    <string name="disable">Disable</string>
    <string name="screenshot_notification_channel_name">Buttercup Feedback Screenshot Channel</string>
    <string name="screenshot_captured_notification_channel_name">Buttercup Feedback Screenshot Captured Channel</string>
    <string name="screenshot_notification_channel_description">Notification channel for screen capture</string>
    <string name="screenshot_captured_notification_channel_description">Notification channel for the screenshot captured</string>
    <string name="screenshot_preview">Screenshot Preview</string>
    <string name="new_screenshot_taken">New screenshot taken.</string>
    <string name="capture_information">Click here to see new screenshot taken.</string>
</resources>